--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -637,7 +637,7 @@ $a_n\arn a$ i $b_n\arn b$ oraz $c\in\R$, to
 \% do późniejszego uzupełnienia
 \end{twier}
 
-Powyższe twierdzenia, jak i jakiekolwiek twierdzenia o aytmetycznych własnościach
+Powyższe twierdzenia, jak i jakiekolwiek inne twierdzenia o arytmetycznych własnościach
 granic nie mają zastosowania w przypadku tzw. \textit{wyrażeń nieoznaczonych}.
 Do opisania takich wyrażeń wykorzystuje się następujące symbole:
 \begin{equation*}
